--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <title>Interest Calculator</title>
+
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <script src="script.js"></script>
+
+
     </head>
+
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div id="txbox">
+            <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+            <section>
+                Amount: $<input id="p"><br/>
 
-        <button onclick="compute()">Compute</button>
-    </body>
+                <br/>
+                <label for="rate">Interest Rate: </label>
+                <input type="range" value="10.50" min="0.0" max="20.0" step="0.50" id="r" oninput="this.nextElementSibling.value = this.value">
+                <output>10.50%</output>
+                <br>
+
+
+                <!-- No. of Years: <input id="n"><br/>  -->
+                <br/>
+                No. of Years<select id="n" name="numbers">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+
+                    <br/>
+                    <br/>
+
+                </select>
+                <br/>
+
+                <br/>
+                <button onclick="calculate()">Compute Interest</button>
+
+                <p id="result"></p>
+
+        
+        </section>
+    <text class="letterCircle">C</text>
+    <text> Everyone Can Get Rich</text>
+</div>
+</body>
 </html>
