--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Interest Calculator</title>
+        <title>Web App – Simple Interest Calculator</title>
         <link href="style.css" rel="stylesheet" type="text/css">
         <script src="script.js"></script>
 
@@ -19,7 +19,7 @@
                 Amount: $<input id="p"><br/>
                 <br/>
                 <label for="rate">Interest Rate: </label>
-                <input type="range" value="10.50" min="0.0" max="20.0" step="0.50" id="r" oninput="this.nextElementSibling.value = this.value">
+                <input type="range" value="10.50" min="1.0" max="20.0" step="0.50" id="r" oninput="this.nextElementSibling.value = this.value">
                 <output>10.50%</output>
                 <br>
 
